# esp-unittest-pilot

./: .gitignore  CLAUDE.md
.github/workflows/: qemu-test.yml  test.yml
ci/: run_host_tests.sh  run_qemu_tests.sh
components/lamp/: CMakeLists.txt  lamp.c
components/lamp/include/: lamp.h
components/lamp/test_apps/: CMakeLists.txt  coverage.sh
components/lamp/test_apps/main/: CMakeLists.txt  test_lamp.c
components/lamp_store/: CMakeLists.txt  lamp_store.c
components/lamp_store/include/: lamp_store.h
components/lamp_store/test_apps/: CMakeLists.txt  coverage.sh  pytest_lamp_store.py
components/lamp_store/test_apps/main/: CMakeLists.txt  test_lamp_store.c
demo/: CMakeLists.txt  sdkconfig.defaults
demo/main/: CMakeLists.txt  led_strip_encoder.c  led_strip_encoder.h  main.c
